--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -47,7 +47,8 @@ services:
     container_name: tensorflow_2_python
     build:
       context: ..
-      dockerfile: docker/tensorflow-Dockerfile
+      dockerfile: docker/tensorflow.Dockerfile
+      shm_size: 1g
     depends_on:
       - postgres
     image: tensorflow_2_python
@@ -56,7 +57,10 @@ services:
     ports:
       - 8888:8080
     restart: always
+    shm_size: 1g
     tty: true
+    ulimits:
+      memlock: -1
     volumes:
       - ..:/usr/src/tensorflow_2
 
