--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,149 @@
-# The NVIDIA container will configure the Python package versions.
-# See the `docker` directory for Docker build files.
+absl-py==0.9.0
+alabaster==0.7.12
+apipkg==1.5
+astor==0.8.1
+attrs==19.3.0
+Babel==2.8.0
+backcall==0.1.0
+bleach==3.1.0
+cachetools==3.1.1
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+cloudpickle==1.2.2
+coverage==5.0.3
+cycler==0.10.0
+decorator==4.4.1
+defusedxml==0.6.0
+dill==0.3.1.1
+docopt==0.6.2
+docutils==0.16
+entrypoints==0.3
+execnet==1.7.1
+Faker==4.0.1
+future==0.17.1
+gast==0.2.2
+git-lint==0.1.2
+google-auth==1.9.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.1.8
+googleapis-common-protos==1.6.0
+graphsurgeon==0.4.1
+grpcio==1.25.0
+h5py==2.9.0
+horovod==0.18.2
+html-linter==0.4.0
+idna==2.8
+imagesize==1.2.0
+importlib-metadata==1.3.0
+ipykernel==5.1.3
+ipython==7.10.2
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.15.1
+Jinja2==2.10.3
+joblib==0.14.1
+json5==0.8.5
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.1.0
+jupyter-core==4.6.1
+jupyter-tensorboard==0.1.10
+jupyterlab==1.0.2
+jupyterlab-server==1.0.0
+jupytext==1.3.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
+Markdown==3.1.1
+MarkupSafe==1.1.1
+matplotlib==3.2.0
+memory-profiler==0.57.0
+mistune==0.8.4
+mock==3.0.5
+more-itertools==8.0.2
+nbconvert==5.6.1
+nbformat==4.4.0
+nltk==3.2.5
+notebook==5.7.8
+numpy==1.17.4
+nvidia-dali==0.17.0
+nvidia-dali-tf-plugin==0.17.0
+oauthlib==3.1.0
+opt-einsum==3.1.0
+packaging==20.3
+pandas==1.0.1
+pandocfilters==1.4.2
+parso==0.5.2
+pathlib2==2.3.5
+pep8==1.7.1
+pexpect==4.7.0
+pickleshare==0.7.5
+plotly==4.5.2
+pluggy==0.13.1
+portpicker==1.3.1
+prometheus-client==0.7.1
+promise==2.3
+prompt-toolkit==3.0.2
+protobuf==3.11.1
+psutil==5.6.3
+ptyprocess==0.6.0
+py==1.8.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+Pygments==2.5.2
+pyparsing==2.4.6
+pyrsistent==0.15.6
+pytest==5.3.5
+pytest-cache==1.0
+pytest-cov==2.8.1
+pytest-pep8==1.0.6
+python-dateutil==2.8.1
+pytz==2019.3
+PyYAML==5.2
+pyzmq==18.1.1
+qtconsole==4.7.1
+QtPy==1.9.0
+requests==2.22.0
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.0
+scikit-learn==0.22.2.post1
+scipy==1.3.1
+Send2Trash==1.5.0
+six==1.13.0
+snakeviz==2.0.1
+snowballstemmer==2.0.0
+Sphinx==2.4.3
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+template-remover==0.1.9
+tensorboard==2.1.1
+tensorflow==2.1.0
+tensorflow-addons==0.5.2
+tensorflow-datasets==1.2.0
+tensorflow-estimator==2.1.0
+tensorflow-gpu==2.0.0+nv
+tensorflow-metadata==0.15.2
+tensorrt==7.0.0.11
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+text-unidecode==1.3
+tornado==6.0.3
+tqdm==4.41.0
+traitlets==4.3.3
+uff==0.6.5
+urllib3==1.25.7
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.16.0
+widgetsnbextension==3.5.1
+wrapt==1.11.2
+zipp==0.6.0
